@@ -530,6 +530,7 @@ All (GUI):
 - Added "filter changed" event to wxFileCtrl (Bill Jones).
 - wxAUI: update floating window position and not only size on resize (MacGyver).
 - Added wxComboCtrl::SetTextCtrlStyle().
+- Also update client data in wxRearrangeList control (John Roberts).
 
 GTK:
 
